fix: Noreferrer link typos

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,8 +21,8 @@ import { LINKS } from '../consts';
 		helps me financially for now.
 	</p>
 	<p>
-		Most of my projects are freely accessible on my <a href={LINKS.github}>GitHub</a>, except for my games
-		which I prefer to keep private. I do have <a href=`${LINKS.github}/godot-fcc-game`>one game</a> publicly 
+		Most of my projects are freely accessible on my <a href={LINKS.github} rel="noopener noreferrer">GitHub</a>, except for my games
+		which I prefer to keep private. I do have <a href=`${LINKS.github}/godot-fcc-game` rel="noopener noreferrer">one game</a> publicly 
 		available though, which is the first one I
 		ever made with Godot.
 	</p>
@@ -93,10 +93,10 @@ import { LINKS } from '../consts';
 				🎮 Competed in 1 game jam with a game called <a href="https://grayvox.itch.io/noirdo" rel="noopener noreferrer">Noirdo</a>.
 			</li>
 			<li>
-				📋 Created a <a href=`${LINKS.github}/rails-alternatives` rel="nopener noreferrer">simple repo</a> for alternatives to Ruby on Rails.
+				📋 Created a <a href=`${LINKS.github}/rails-alternatives` rel="noopener noreferrer">simple repo</a> for alternatives to Ruby on Rails.
 			</li>
 			<li>
-				🎰 Built a total of 3 different Discord Bots (Only 1 has a <a href=`${LINKS.github}/on-this-day-bot`>public repo</a> though).
+				🎰 Built a total of 3 different Discord Bots (Only 1 has a <a href=`${LINKS.github}/on-this-day-bot` rel="noopener noreferrer">public repo</a> though).
 			</li>
 		</ul>
 	</div>
