Add Backend tools to About

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -49,7 +49,11 @@ import { LINKS } from '../consts';
 		<a href="https://en.wikipedia.org/wiki/C_(programming_language)" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=c" /></a>
 		<h5>Frontend</h5>
 		<a href="https://astro.build" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=astro" /></a>
+		<a href="https://tailwindcss.com" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=tailwind" /></a>
 		<a href="https://vite.dev" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=vite" /></a>
+		<h5>Backend</h5>
+		<a href="https:/nodejs.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=nodejs" /></a>
+		<a href="https://bun.sh" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=bun" /></a>
 		<h5>Game Dev</h5>
 		<a href="https://godotengine.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=godot" /></a>
 	</div>
