Update about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,9 +16,9 @@ import { LINKS } from '../consts';
 		That's not my real name of course, as I prefer some sense of privacy on the interwebs.
 	</p>
 	<p>
-		I'm currently working in retail, but am studying Computer Science and Game Development in the hopes of 
-		becoming a full time indie dev. Unfortunately, this title doesn't pay the bills well... so the retail job
-		helps me financially for now.
+		I'm currently working as a Developer at <a href="https://stable.dev" rel="noopener noreferrer">stable.dev</a>, a startup 
+		focused on giving developers the ability to just push their code to GitHub and have their bot up and running thanks to our easy
+		and effective hosting solutions.
 	</p>
 	<p>
 		Most of my projects are freely accessible on my <a href={LINKS.github} rel="noopener noreferrer">GitHub</a>, except for my games
