Quick edits to imports

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/BlogPost.astro';
-import { LINKS } from '../consts';
+import { LINKS } from '../consts.ts';
 ---
 
 <Layout
