--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import Status from '../components/Status.astro'
 import Roles from '../components/Roles.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { SITE_TITLE, SITE_DESCRIPTION } from '../consts.ts';
 ---
 
 <!doctype html>
