Change Linktree to Bento link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ const today = new Date();
 		<a href={LINKS.kofi} target="_blank" rel="noopener noreferrer">
 			<Icon name="mdi:coffee" />
 		</a>
-		<a href={LINKS.linktree} target="_blank" rel="noopener noreferrer">
+		<a href={LINKS.links} target="_blank" rel="noopener noreferrer">
 			<Icon name="mdi:link" />
 		</a>
 	</div>
