fix: Use components and update status
Removes most of the <br> tags as well to clean up the About page

--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -6,20 +6,17 @@
     <h5>Currently, I'm...</h5>
     <ul>
         <li>
-            ❤️‍🩹 Trying to get over the Arcane finale </a>
+            🦫 Helping build <a href="https://stable.dev">stable.dev</a>
         </li>
         <li>
-            🧔🏼‍♂️ On <a href="https://www.theodinproject.com/paths/full-stack-ruby-on-rails" target="_blank" rel="noopener noreferrer">The Odin Project</a>'s Ruby on Rails track
+            ☠️ Competing in the <a href="https://itch.io/jam/pirate">16th PirateSoftware Game Jam</a>
         </li>
         <li>
             🐕 Laying the ground work for a game about a dog
         </li>
         <li>
-            🚧 Having a work-life balance crisis (It's fine)
-        </li>
-        <li>
-            🎄 Successfully Decking The Halls (Merry Christmas to whoever reads this!)
+            🌲 Writing a story out of a Spotify playlist
         </li>
     </ul>
-    <p class="mini-text">Status last updated 12/17/2024</p>
+    <p class="mini-text">Status last updated January 22nd, 2024</p>
 </div>
