--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,9 @@
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
+.breaks div {
+	margin-bottom: 2rem;
+}
 .mini-text {
 	color: var(--blend-text);
 	font-size: 0.75em;
