fix: New status links

--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -6,10 +6,10 @@
     <h5>Currently, I'm...</h5>
     <ul>
         <li>
-            🦫 Helping build <a href="https://stable.dev">stable.dev</a>
+            🦫 Helping build <a href="https://stable.dev" target="_blank" rel="noopener noreferrer">stable.dev</a>
         </li>
         <li>
-            ☠️ Competing in the <a href="https://itch.io/jam/pirate">16th PirateSoftware Game Jam</a>
+            ☠️ Competing in the <a href="https://itch.io/jam/pirate" target="_blank" rel="noopener noreferrer">16th PirateSoftware Game Jam</a>
         </li>
         <li>
             🐕 Laying the ground work for a game about a dog
