--- a/src/components/Roles.astro
+++ b/src/components/Roles.astro
@@ -3,16 +3,17 @@ import { LINKS } from '../consts'
 ---
 
 <div class="special-box">
-    <img src="/Sunglasses.png" width="64" alt="">
+    <img src="/Sunglasses.png" width="64" alt="Profile picture">
     <h5>Grayvox <span class="mini-text">he/him</span></h5>
     <p>
         <i>User joined on XXX, XX, XXXX.</i>
     </p>
-    <code>💾 Self Taught Programmer</code>
+    <code>🎓 Self Taught Programmer</code>
     <code>🌐 Web Dev</code>
     <code>👾 Game Dev</code>
     <br>
-    <code>💽 Systems Programming</code>
+    <code>💻 Front End Dev</code>
+    <code>💾 Back End Dev</code>
     <code>🪶 Writer</code>
     <code>🎨 Artist</code>
     <br>
