--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,5 @@
 ---
 import AboutContents from '../components/AboutContents.astro';
-import Achievements from '../components/Achievements.astro';
 import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
@@ -19,12 +18,11 @@ const title = `About Me - ${SITE_TITLE}`
 	<body>
 		<Header />
 		<main class="breaks">
-			<h1 class="title center-text">About Me</h1>
+			<h3 class="center-text">🐺 <span>About Me</span> 🐺</h3>
 			<br>
 			<AboutContents />
 			<Technologies />
 			<Interests />
-			<Achievements />
 		</main>
 		<Footer />
 	</body>
