--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,8 +6,9 @@ import HeaderLink from './HeaderLink.astro';
 	<nav>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
+			<HeaderLink href="/blog">Writings</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/contact">Contact</HeaderLink>
 		</div>
 	</nav>
 </header>
