--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -13,8 +13,9 @@
     <a href="https://tailwindcss.com" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=tailwind" /></a>
     <a href="https://vite.dev" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=vite" /></a>
     <h5>Backend</h5>
-    <a href="https://nodejs.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=nodejs" /></a>
     <a href="https://bun.sh" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=bun" /></a>
+    <a href="https://nodejs.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=nodejs" /></a>
+    <a href="https://docker.com" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=docker" /></a>
     <h5>Game Dev</h5>
     <a href="https://godotengine.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=godot" /></a>
 </div>
