--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -174,6 +174,9 @@ hr {
 li {
 	margin-bottom: 1.5rem;
 }
+main h3 span {
+	text-shadow: 3px 3px 10px black;
+}
 @media (max-width: 720px) {
 	body {
 		font-size: 18px;
