feat: Update status and fix Discord invite

--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -9,14 +9,14 @@
             🦫 Helping build <a href="https://stable.dev" target="_blank" rel="noopener noreferrer">stable.dev</a>
         </li>
         <li>
-            ☠️ Competing in the <a href="https://itch.io/jam/pirate" target="_blank" rel="noopener noreferrer">16th PirateSoftware Game Jam</a>
+            🩵 Learning Go with <a href="https://boot.dev">Boot.dev</a> and <a href="https://gobyexample.com">Go By Example</a>
+        </li>
+        <li>
+            🔧 Building a Discord bot to manage <a href="https://discord.gg/cX5UGfpexf">my community Discord</a>
         </li>
         <li>
             🐕 Laying the ground work for a game about a dog
         </li>
-        <li>
-            🌲 Writing a story out of a Spotify playlist
-        </li>
     </ul>
-    <p class="mini-text">Status last updated January 22nd, 2024</p>
+    <p class="mini-text">Status last updated February 8th, 2025</p>
 </div>
