--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,6 +43,9 @@
 	background-color: var(--bg-dark);
 	border-radius: 10px;
 }
+.prose h3 {
+	margin: 5rem 0 2rem 0;
+}
 .special-box {
 	padding: 1rem;
 	color: var(--text);
