--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,6 +16,9 @@ const today = new Date();
 		color: rgb(var(--gray));
 		text-align: center;
 	}
+	img {
+		margin-left: 7rem;
+	}
 	.social-links {
 		display: flex;
 		justify-content: center;
@@ -39,8 +42,12 @@ const today = new Date();
 		</a>
 		<a href={LINKS.twitch} target="_blank" rel="noopener noreferrer">
 			<Icon name="mdi:twitch" />
+		</a>
 		<a href={LINKS.github} target="_blank" rel="noopener noreferrer">
 			<Icon name="mdi:github" />
+		</a>
+		<a href={LINKS.itch} target="_blank" rel="noopener noreferrer">
+			<Icon name="cib:itch-io" />
 		</a>
 		<a href={LINKS.discord} target="_blank" rel="noopener noreferrer">
 			<Icon name="ic:baseline-discord" />
@@ -49,5 +56,5 @@ const today = new Date();
 			<Icon name="mdi:link" />
 		</a>
 	</div>
-	<img src="/scribbles/FindMe.png" alt="Find me elsewhere" style="margin-left: 2rem;">
+	<img src="/scribbles/FindMe.png" alt="Find me elsewhere">
 </footer>
