--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -9,14 +9,14 @@
             🦫 Helping build <a href="https://stable.dev" target="_blank" rel="noopener noreferrer">stable.dev</a>
         </li>
         <li>
-            🩵 Learning Go with <a href="https://boot.dev">Boot.dev</a> and <a href="https://gobyexample.com">Go By Example</a>
+            🧬 Learning React and Next.js (shoot me now)
         </li>
         <li>
             🔧 Building a Discord bot to manage <a href="https://discord.gg/cX5UGfpexf">my community Discord</a>
         </li>
         <li>
-            🐕 Laying the ground work for a game about a dog
+            🧠 Dabbling in more advanced JavaScript concepts for employment purposes
         </li>
     </ul>
-    <p class="mini-text">Status last updated February 8th, 2025</p>
+    <p class="mini-text">Status last updated March 2nd, 2025</p>
 </div>
