--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -1,8 +1,8 @@
 ---
-
+import Card from "./Card.astro";
 ---
 
-<div class="special-box">
+<Card>
     <h5>Currently, I'm...</h5>
     <ul>
         <li>
@@ -12,11 +12,11 @@
             🧬 Learning React and Next.js (shoot me now)
         </li>
         <li>
-            🔧 Building a Discord bot to manage <a href="https://discord.gg/cX5UGfpexf">my community Discord</a>
+            🔧 Building a Discord bot to manage <a href="https://discord.gg/cX5UGfpexf" target="_blank" rel="noopener noreferrer">my community Discord</a>
         </li>
         <li>
             🧠 Dabbling in more advanced JavaScript concepts for employment purposes
         </li>
     </ul>
     <p class="mini-text">Status last updated March 2nd, 2025</p>
-</div>
+</Card>
