--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -9,6 +9,8 @@
     <a href="https://java.com" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=java" /></a>
     <a href="https://en.wikipedia.org/wiki/C_(programming_language)" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=c" /></a>
     <h5>Frontend</h5>
+    <a href="https://react.dev" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=react" /></a>
+    <a href="https://nextjs.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=nextjs" /></a>
     <a href="https://astro.build" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=astro" /></a>
     <a href="https://tailwindcss.com" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=tailwind" /></a>
     <a href="https://vite.dev" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=vite" /></a>
