--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,6 +22,7 @@ const today = new Date();
 	.social-links {
 		display: flex;
 		justify-content: center;
+		padding: 1rem;
 		gap: 1em;
 		margin-top: 1em;
 	}
