--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -57,11 +57,12 @@ const title = `${SITE_TITLE}'s Projects`
 				display: block;
 			}
 
-			h4 {
-				margin-top: 20px;
+			h3 {
+				margin-top: 1.5rem;
 			}
 
 			p {
+				margin-top: 0px;
 				line-height: 2rem;
 			}
 
