Add Thoughts system

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ import HeaderLink from './HeaderLink.astro';
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/blog">Writings</HeaderLink>
+			<HeaderLink href="/thoughts">Thoughts</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 			<HeaderLink href="/questions">FAQ</HeaderLink>
 			<HeaderLink href="/contact">Contact</HeaderLink>
